# polyscaf

./: .gitignore  main.py  pyproject.toml  requirements.txt
polyscaf_python/: __init__.py  settings.py  utils.py
polyscaf_python/commands/: __init__.py  factory.py  model.py  project.py  route.py  schema.py  script.py  service.py  test.py  util.py
