[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "polyscaf"
version = "0.1.0"
description = "FastAPI scaffolding CLI"
authors = [{name = "goosesl1nger"}]
dependencies = [
    "typer",
    "inflect",
]

[project.scripts]
polyscaf = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["polyscaf_python*"]